--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -13,10 +13,10 @@
 
   <ul class="nav justify-content-end">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Register</a>
+      <a class="nav-link active" [routerLink]="['/register']">Register</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link active" href="#">Login</a>
+    <a class="nav-link active" [routerLink]="['/login']">Login</a>
   </li>
   </ul>
 </nav>
