--- a/src/app/core/auth/register/register.component.html
+++ b/src/app/core/auth/register/register.component.html
@@ -1,3 +1,17 @@
-<p>
-  register works!
-</p>
+<h2>Register</h2>
+
+<form>
+  <div class="form-group">
+    <label for="email">Name</label>
+    <input type="email" class="form-control" id="name" placeholder="Enter name">
+  </div>
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" id="email" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-primary">Register</button>
+</form>
