--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Home</a>
+      <a class="nav-link active" [routerLink]="['/home']">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Users</a>
