--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -4,7 +4,7 @@
       <a class="nav-link active" [routerLink]="['/home']">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Users</a>
+      <a class="nav-link" [routerLink]="['/users']">Users</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Categories</a>
