add materia-tree module and component

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -9,6 +9,9 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Categories</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/material-tree']">Material Tree</a>
+    </li>
   </ul>
 
   <ul class="nav justify-content-end">
