--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+.mat-tree-node.apto-tree__node-item button {
+  margin-right: 12px;
+  opacity: 0;
+}
+
+.mat-tree-node button {
+  border: 0;
+  border-radius: 50%;
+  margin-right: 10px;
+  width: 30px;
+  height: 30px;
+  background-color: #229ee6;
+  position: relative;
+
+  &::after, &::before {
+    content: '';
+    display: block;
+    background-color: white;
+    position: absolute;
+  }
+
+  &::after {
+    width: 15px;
+    height: 2px;
+    top: 14px;
+    left: 8px;
+  }
+
+  &::before {
+    width: 2px;
+    height: 15px;
+    top: 7px;
+    left: 14px;
+  }
+}
