--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -7,7 +7,7 @@
       <a class="nav-link" [routerLink]="['/users']">Users</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Categories</a>
+      <a class="nav-link" [routerLink]="['/categories']">Categories</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/material-tree']">Material Tree</a>
