--- a/src/app/feature/material-tree/material-tree.component.html
+++ b/src/app/feature/material-tree/material-tree.component.html
@@ -1,26 +1,34 @@
-<section *ngFor="let room of rooms" class="controllers">
-  <h3>{{ room.name }}</h3>
+<ng-container *ngIf="(rooms$ | async) as rooms; else spinner">
 
-  <mat-tree [dataSource]="room.controllers" [treeControl]="treeControl" class="apto-tree">
-    <mat-tree-node *matTreeNodeDef="let binding" matTreeNodeToggle>
-      <li class="mat-tree-node apto-tree__node-item">
-        <button mat-icon-button disabled></button>
-        {{binding.channel}}: {{binding.action}}
-      </li>
-    </mat-tree-node>
+  <section *ngFor="let room of rooms" class="controllers">
+    <h3>{{ room.name }}</h3>
 
-    <mat-nested-tree-node *matTreeNodeDef="let controller; when: hasChild">
-      <li>
-        <div class="mat-tree-node">
-          <button mat-icon-button matTreeNodeToggle>
-            <mat-icon class="mat-icon-rtl-mirror" [ngClass]="{'apto-tree--default': true, 'apto-tree--expand':  treeControl.isExpanded(controller) }"></mat-icon>
-          </button>
-          {{controller.name}} ({{controller.bindings.length}})
-        </div>
-        <ul [class.apto-tree--invisible]="!treeControl.isExpanded(controller)" class="apto-tree__node-container">
-          <ng-container matTreeNodeOutlet></ng-container>
-        </ul>
-      </li>
-    </mat-nested-tree-node>
-  </mat-tree>
-</section>
+    <mat-tree [dataSource]="room.controllers" [treeControl]="treeControl" class="apto-tree">
+      <mat-tree-node *matTreeNodeDef="let binding" matTreeNodeToggle>
+        <li class="mat-tree-node apto-tree__node-item">
+          <button mat-icon-button disabled></button>
+          {{binding.channel}}: {{binding.action}}
+        </li>
+      </mat-tree-node>
+
+      <mat-nested-tree-node *matTreeNodeDef="let controller; when: hasChild">
+        <li>
+          <div class="mat-tree-node">
+            <button mat-icon-button matTreeNodeToggle>
+              <mat-icon class="mat-icon-rtl-mirror" [ngClass]="{'apto-tree--default': true, 'apto-tree--expand':  treeControl.isExpanded(controller) }"></mat-icon>
+            </button>
+            {{controller.name}} ({{controller.bindings.length}})
+          </div>
+          <ul [class.apto-tree--invisible]="!treeControl.isExpanded(controller)" class="apto-tree__node-container">
+            <ng-container matTreeNodeOutlet></ng-container>
+          </ul>
+        </li>
+      </mat-nested-tree-node>
+    </mat-tree>
+  </section>
+
+</ng-container>
+
+<ng-template #spinner>
+  <mat-spinner></mat-spinner>
+</ng-template>
