--- a/src/app/core/auth/login/login.component.html
+++ b/src/app/core/auth/login/login.component.html
@@ -1,13 +1,13 @@
 <h2>Login</h2>
 
-<form>
+<form [formGroup]="form" (ngSubmit)="send()">
   <div class="form-group">
     <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" placeholder="Enter email">
+    <input formControlName="login" type="text" class="form-control" id="email" placeholder="Enter email">
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" class="form-control" id="password" placeholder="Password">
+    <input formControlName="password" type="password" class="form-control" id="password" placeholder="Password">
   </div>
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
