--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -18,10 +18,10 @@
     <li class="nav-item">
       <a class="nav-link active" [routerLink]="['/register']">Register</a>
     </li>
-    <li class="nav-item">
+    <li *ngIf="!(isLogged$ | async)" class="nav-item">
       <a class="nav-link active" [routerLink]="['/login']">Login</a>
     </li>
-    <li class="nav-item">
+    <li *ngIf="isLogged$ | async" class="nav-item">
       <a class="nav-link active" (click)="logOut()">Log out</a>
     </li>
   </ul>
